# jcselect

./: .env.example  .gitignore  .pre-commit-config.yaml  CLOUD_INTEGRATION_VERIFICATION_REPORT.md  DASHBOARD_POLISH_STATUS.md  ICON_CONSOLIDATION_SUCCESS.md  Makefile  README.md  SPEC_COMPLIANCE_REPORT.md  STEP10_COMPLETION_REPORT.md  STEP_11_SUMMARY.md  STEP_12_SUMMARY.md  SVG_ICON_CLEANUP_REPORT.md  SVG_ICON_USAGE_MAPPING.md  SVG_STANDARDIZATION_STATUS.md  cloud_verification.py  coverage.xml  demo_card_tile.qml  demo_dashboard.py  demo_entry_points.py  demo_login_window.py  demo_step7_complete.py  demo_step8_complete.py  demo_step8_icons.py  mypy.ini  pyproject.toml  ruff.toml  setup_cloud_integration.py  step10_verification.py  test.csv  test_card_tile_demo.py  test_entry_points.py  test_final_acceptance_criteria.py  test_pen_picker_demo.py  test_step10_demo.py
.cursor/rules/: py.mdc
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 19ee681d4f77_add_results_aggregation_view.py  48d1d8da74af_tally_counting_enhancements.py  52569a9164c7_initial_schema.py  56f069e8711f_add_soft_delete_tombstones.py  a38a64aee2cc_add_search_indexes_for_voter_.py
cursor-docs/: 2025-05-27-project-bootstrap-spec.md  2025-05-28-domain-schema-spec.md  2025-05-29-ui-voter-search-spec.md  dashboard-polish-spec2.md  live-results-winner-spec.md  login-dashboard-spec.md  polish2.md  sync-engine.md  tally-counting-spec.md
docs/dev/: testing.md
resources/qml/: .gitkeep
resources/themes/: .gitkeep
scripts/: check_db.py  check_search_perf.py  demo_live_results_loop.py  generate_translations.py  quick_run.py  seed_demo_data.py  smoke_live_results.py  upgrade_db.py  validate_translations.py  verify_soft_delete.py
src/jcselect/: __main__.py  admin.py  dao.py  dao_results.py  main.py  operator.py
src/jcselect/api/: auth.py  dependencies.py  exceptions.py  health.py  main.py  sync.py
src/jcselect/api/schemas/: auth_schemas.py  health_schemas.py  sync_schemas.py
src/jcselect/components/: CardTile.qml  DashboardBackground.qml  PenPickerDialog.qml  PerformanceOverlay.qml  SearchBar.qml  Snackbar.qml  VoteButton.qml  VoterCard.qml  VoterDetailPane.qml  qmldir
src/jcselect/controllers/: __init__.py  app_controller.py  dashboard_controller.py  login_controller.py  pen_picker_controller.py  results_controller.py  sync_status_controller.py  tally_controller.py  voter_search_controller.py
src/jcselect/i18n/: ar_LB.qm  ar_LB.ts
src/jcselect/models/: __init__.py  audit_log.py  base.py  dto.py  enums.py  party.py  pen.py  results.py  sync_schemas.py  tally_line.py  tally_session.py  user.py  voter.py
src/jcselect/sync/: __init__.py  engine.py  queue.py
src/jcselect/ui/: AdminDashboard.qml  App.qml  LoginWindow.qml  OperatorDashboard.qml  ResultsWindow.qml  TallyCountingWindow.qml  Theme.qml  VoterSearchWindow.qml  __init__.py  qmldir
src/jcselect/ui/components/: AdaptiveCardGrid.qml  AppFrame.qml  BallotTypePanel.qml  CandidateCheckbox.qml  ExportMenu.qml  MetricCard.qml  PartyColumn.qml  PenSelector.qml  RefreshBadge.qml  ResultsTable.qml  StatCard.qml  StatusIndicator.qml  SvgIcon.qml  TallyTotals.qml  ValidationWarnings.qml  WinnerCard.qml  qmldir
src/jcselect/ui/pages/: CandidateTotalsPage.qml  ChartsPage.qml  PartyTotalsPage.qml  WinnersPage.qml
src/jcselect/utils/: auth.py  auth_cache.py  db.py  export.py  logging.py  settings.py
tests/: conftest.py
tests/api/: __init__.py  test_auth.py  test_sync_push_pull.py
tests/gui/: __init__.py  test_app_entry_points.py  test_candidate_totals_page.py  test_card_tile.qml  test_dashboard_enhancements.py  test_login_flow.py  test_main_window.py  test_party_components.py  test_party_totals_page.py  test_pen_selector.py  test_refresh_badge.py  test_refresh_badge_manual.py  test_results_table.py  test_results_window_navigation.py  test_sync_status_ui.py  test_tally_counting_window.py  test_voter_search_ui.py  test_winners_page.py
tests/helpers/: mock_sync_server.py  qml_test_helper.py
tests/integration/: test_export_integration.py  test_paginated_sync.py  test_qml_components.py  test_sync_end_to_end.py  test_tally_sync_fast_path.py
tests/perf/: __init__.py  test_fast_sync_latency.py  test_large_dataset_performance.py
tests/unit/: test_app_controller.py  test_dao_mark_voted.py  test_dependency_ordering.py  test_export_utils.py  test_has_new_results_flag.py  test_migration_tally_schema.py  test_party_dao.py  test_pen_picker_controller.py  test_qrc_icons.py  test_results_controller.py  test_results_controller_export.py  test_results_dao.py  test_results_schema.py  test_soft_delete_dao.py  test_soft_deletes.py  test_sync_engine.py  test_sync_fast_integration.py  test_sync_queue.py  test_sync_queue_tally.py  test_sync_settings.py  test_tally_controller.py  test_tally_line_upsert.py  test_tally_models.py  test_validation_logic.py  test_voter_search_controller.py
